<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMesa"
        android:id="@+id/tvMesa"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvComensal"
        android:id="@+id/tvComensal"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvCategorias"
            android:id="@+id/textView"
            android:textSize="15sp"
            android:padding="5dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCategorias"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSubcategoria"
            android:id="@+id/textView2"
            android:textSize="15sp"
            android:padding="5dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spSubcategoria"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSubcategoria"
        android:id="@+id/textView3"
        android:textSize="15sp"
        android:padding="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:id="@+id/lvPlatos"
        android:padding="5dp"
        android:layout_weight="0.77" />

</LinearLayout>